# v3-fluent-launcher

./: .gitignore  README.md  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
.github/workflows/: build.yml
src/: App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: config_manager.rs  conflict_resolver.rs  database.rs  game_launcher.rs  lib.rs  main.rs  mod_manager.rs  save_parser.rs  scene_manager.rs  steam.rs  toolbox.rs
src/components/: Sidebar.tsx  TitleBar.tsx
src/pages/: Configuration.tsx  ConflictCenter.tsx  Dashboard.tsx  LaunchPad.tsx  ModStudio.tsx  SaveCommand.tsx  Settings.tsx  SetupWizard.tsx  Toolbox.tsx
src/stores/: appStore.ts  settingsStore.ts
src/styles/: global.css
src/types/: index.ts
src/utils/: api.ts  helpers.ts
